Add some styles

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "currency-exchange",
+  "name": "currency",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://roberts98.github.io/currency",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -11,12 +12,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.0.0",
+    "gh-pages": "^3.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuid": "^8.1.0"
   },
@@ -24,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
